# nova-mcp

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  documentation.md  instructions.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
examples/: test_client.rs
scripts/: build.sh  test.sh
src/: auth.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  server.rs
src/context/: dto.rs  helpers.rs  mod.rs  request_context.rs
src/mcp/: dto.rs  handler.rs
src/plugins/: dto.rs  handler.rs  helpers.rs  manager.rs  mod.rs
src/tools/: mod.rs  public.rs
src/tools/gecko_terminal/: dto.rs  handler.rs  helpers.rs  implementation.rs  mod.rs
src/tools/gecko_terminal/networks/: dto.rs  handler.rs  mod.rs
src/tools/gecko_terminal/new_pools/: dto.rs  mod.rs
src/tools/gecko_terminal/pool/: dto.rs  handler.rs  mod.rs
src/tools/gecko_terminal/search_pools/: dto.rs  handler.rs
src/tools/gecko_terminal/token/: dto.rs  handler.rs  mod.rs
src/tools/gecko_terminal/trending_pools/: handler.rs  mod.rs
src/tools/new_pools/: handler.rs  implementation.rs
src/tools/public/: dto.rs  implementation.rs  mod.rs
src/tools/search_pools/: implementation.rs  mod.rs
src/tools/trending_pools/: dto.rs  implementation.rs
tests/: auth.rs  invalid_tool_args.rs  pool_tools_validation.rs  public_integration.rs  server_list_tools.rs
